--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>Newer Company Inc.</title>
   </head>
   <body>
-    <div class="skip"><a href="">Skip to Main Content</a></div>
+    <div class="skip"><a href="#main">Skip to Main Content</a></div>
     <header>
       <nav>
           <ul>
@@ -22,7 +22,7 @@
         </nav>
     </header>
     <main class="container" id = "main">
-      <div class = overview>
+      <div class = "overview">
         <h1>New Company Inc.</h1>
         <p>Creating a better workspace by transforming the office paradigm. We're helping employees make their mark on the world through effective workspace management.  We would love to meet you and explore collaboration opportunities.</p>
       </div>
